GNOME Bugzilla – Bug 736312
Yelp crashes on searching
Last modified: 2014-09-11 15:24:51 UTC
When I type anything and press Enter or click on "Search ..." the program throws a segmentation fault. The problem is that on document_read_contents function on yelp-document.c, we get the **real** variable before the if block where we do search stuff.
Created attachment 285719 [details] [review] Patch that fixes the problem
seems like a pretty obvious patch. real is used before it is initialized.
*** Bug 659970 has been marked as a duplicate of this bug. ***
Looks good. Thanks.