libyelp/yelp-document.c
@@ -917,6 +917,8 @@ document_read_contents (YelpDocument *document,
 
     g_mutex_lock (&document->priv->mutex);
 
+    real = hash_lookup (document->priv->page_ids, page_id);
+
     if (page_id != NULL && g_str_has_prefix (page_id, "search=")) {
         gchar *tmp, *tmp2, *txt;
         GVariant *value;
@@ -1038,7 +1040,6 @@ document_read_contents (YelpDocument *document,
         return (const gchar *) str;
     }
 
-    real = hash_lookup (document->priv->page_ids, page_id);
     str = hash_lookup (document->priv->contents, real);
     if (str)
 	str_ref (str);
